# smask

./: Cargo.toml  README.md  build.rs  data.db  sqlx-data.json
migrations/: 20230307162639_init.sql
report/: acro.tex  ch1.tex  ch2.tex  ch3.tex  cover.tex  coverpage.tex  glossaries.tex  intro.tex  main.ist  main.tex
src/: database.rs  main.rs  session.rs
src/database/: cell.rs  column.rs  role.rs  table.rs
templates/: all-role-section.html  all-table-section.html  drop-role-column-section.html  drop-role-table-section.html  edit-cell-section.html  hello.html  login-section.html  new-column-section.html  new-record-section.html  new-role-column-section.html  new-role-table-section.html  new-table-section.html  signup-section.html  skel.html  table-all.html  table-schema.html  table-view.html
